--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,34 +19,37 @@ const { title } = Astro.props;
   </head>
   <body>
     <div id="app" class="relative h-screen p-2 gap-2">
-      <aside class="[grid-area:aside] flex-col flex overflow-y-auto"></aside>
-      <main  class="[grid-area:main] rounded-lg bg-zinc-900 overflow-y-auto w-full">
+      <aside class="[grid-area:aside] flex-col flex overflow-y-auto bg-amber-700 rounded-lg"></aside>
+      <main class="[grid-area:main] rounded-lg bg-zinc-900 overflow-y-auto w-full">
         <slot />
       </main>
-      <footer>
-				<div class="[grid-area:album]"></div>
-				<div class="[grid-area:player]"></div>
-			</footer>
+			<div class="[grid-area:album] rounded-lg bg-teal-700 overflow-y-auto">
+			</div>
+      <footer class="[grid-area:player] h-[80px] rounded-lg bg-pink-800">
+      </footer>
     </div>
-    <style>
-      #app {
-        display: grid;
-        grid-template-areas:
-          "aside main"
-					"album main"
-          "album player";
-        grid-template-columns: 350px 1fr;
-        grid-template-rows: 1fr auto;
-      }
-    </style>
   </body>
 </html>
 
 <style>
-  html,
-  body {
-    margin: 0;
-    width: 100%;
-    height: 100%;
-  }
+	#app {
+		display: grid;
+    grid-template-areas:
+    	"aside main"
+      "album player";
+    grid-template-columns: 350px 1fr;
+    grid-template-rows: 1fr auto;
+		height: 100vh;
+    gap: 0.5rem;
+    padding: 0.5rem;
+	}
+	html {
+		background: #010101;
+		color: white;
+	}
+	body {
+		margin: 0;
+		width: 100%;
+		height: 100%;
+	}
 </style>
