--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import AsideMenu from "@/components/AsideMenu.astro";
 import "./src/styles/global.css";
 
 interface Props {
@@ -19,7 +20,9 @@ const { title } = Astro.props;
   </head>
   <body>
     <div id="app" class="relative h-screen p-2 gap-2">
-      <aside class="[grid-area:aside] flex-col flex overflow-y-auto bg-amber-700 rounded-lg"></aside>
+      <aside class="[grid-area:aside] flex-col flex overflow-y-auto bg-zinc-900 rounded-lg">
+        <AsideMenu/>
+      </aside>
       <main class="[grid-area:main] rounded-lg bg-zinc-900 overflow-y-auto w-full">
         <slot />
       </main>
@@ -35,7 +38,7 @@ const { title } = Astro.props;
     grid-template-areas:
     	"aside main"
       "player player";
-    grid-template-columns: 350px 1fr;
+    grid-template-columns: 250px 1fr;
     grid-template-rows: 1fr auto;
 		height: 100vh;
     gap: 0.5rem;
